<resources>
    <string name="app_name">FICT App</string>
    <string name="action_settings">Settings</string>
    <string name="timetable">Timetable</string>

    <string name="calender">Calender</string>
    <string name="contacts">Contacts</string>
    <string name="lectures">Lectures</string>
    <string name="about_summary">Android Calendar View Demo V0.5.0</string>
    <string name="about">About</string>
    <string name="pick_summary">start with ACTION_PICK</string>
    <string name="pick">Pick up a Date</string>
    <string name="show_summary">start with ACTION_VIEW</string>
    <string name="show">Show Calendar</string>

    <string name="hint">Hint: touch the first or last day of month to move to previous or next month.</string>
    <string name="aboutDes">FICT faculty is one of LUCT faculties, It has many different courses as BIT, BBIT, BICT and many more.</string>
</resources>
